--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <!-- CSS customizado -->
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
   <style>
     .countdown-item {
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -41,10 +42,10 @@
       </a>
       <!-- Menu para desktop -->
       <nav class="hidden md:flex space-x-4 text-white text-lg">
-        <a href="index.html" class="hover:text-yellow-400 transition">Home</a>
-        <a href="schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
-        <a href="#patrocinadores" class="hover:text-yellow-400 transition">Patrocinadores</a>
-        <a href="contato.html" class="hover:text-yellow-400 transition">Contato</a>
+        <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
+        <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
+        <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
+        <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
       </nav>
       <!-- Botão do menu móvel -->
       <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
@@ -57,10 +58,10 @@
     <!-- Menu móvel -->
     <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
       <ul class="flex flex-col p-4 space-y-2">
-        <li><a href="index.html" class="block hover:text-yellow-400 transition">Home</a></li>
-        <li><a href="schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
-        <li><a href="#patrocinadores" class="block hover:text-yellow-400 transition">Patrocinadores</a></li>
-        <li><a href="contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
+        <li><a href="/index.html" class="block hover:text-yellow-400 transition">Home</a></li>
+        <li><a href="/schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
+        <li><a href="/speakers.html" class="block hover:text-yellow-400 transition">Palestrantes</a></li>
+        <li><a href="/contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
       </ul>
     </nav>
 
@@ -119,7 +120,7 @@
 
         <!-- CTA Buttons -->
         <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
-          <a href="https://www.sympla.com.br/evento/security-bsides-rio-de-janeiro-2025/2803561?token=a718172e5d58d52061dc4cc637d759d3" 
+          <a href="https://www.sympla.com.br/evento/security-bsides-rio-de-janeiro-2025/2803561" 
              target="_blank"
              class="hero-button inline-block bg-yellow-400 text-black text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-105">
             Compre seu ingresso
@@ -139,46 +140,45 @@
           <div class="mb-16">
             <h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Diamante</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-              <div class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+              <a href="https://uva.br/" class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                 <img src="images/patrocinadores/uva.webp" alt="UVA" class="max-h-32">
-              </div>
-              <div class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+              </a>
+              <a href="https://www.ibliss.com.br" class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                 <img src="images/patrocinadores/ibliss.png" alt="iBliss" class="max-h-32">
-              </div>
+              </a>
             </div>
           </div>
 
           <div class="mb-16">
             <h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Ouro</h3>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-              <div class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/patrocinadores/clavis.webp" alt="Clavis" class="max-h-24">
-              </div>
-              <div class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/patrocinadores/hakai.png" alt="Hakai" class="max-h-24">
-              </div>
-              <div class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/patrocinadores/vortex.png" alt="Vortex" class="max-h-24">
-              </div>
+              <a href="https://clavis.com.br/" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                <img src="images/patrocinadores/clavis.png" alt="Clavis" class="max-h-28">
+              </a>
+              <a href="https://hakaisecurity.io" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                <img src="images/patrocinadores/hakai.png" alt="Hakai" class="max-h-28">
+              </a>
+              <a href="https://www.vortexsecurity.com.br" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                <img src="images/patrocinadores/vortex.png" alt="Vortex" class="max-h-28">
+              </a>
             </div>
           </div>
 
           <div class="mb-16">
             <h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-              <!-- Em breve -->
+              <!-- <a href="https://www.vortexsecurity.com.br" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                <img src="images/patrocinadores/vortex.png" alt="Vortex" class="max-h-24">
+              </a> -->
             </div>
           </div>
 
-          <div>
+          <div class="mb-16">
             <h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-              <div class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/bronze1.png" alt="Patrocinador Bronze 1" class="max-h-20">
-              </div>
-              <div class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/bronze2.png" alt="Patrocinador Bronze 2" class="max-h-20">
-              </div>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+              <a href="https://www.hatbash.com.br" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                <img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-20">
+              </a>
             </div>
           </div>
         </div>
