--- a/speakers/fernando-merces.html
+++ b/speakers/fernando-merces.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando Mercês - BSidesRJ 2025</title>
+    <title>BSidesRJ - BSides Rio de Janeiro</title>
+    <!-- Tailwind CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/custom.css">
+    <!-- CSS customizado -->
+    <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
+    <style>
+        .countdown-item {
+          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+          animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+          0% { transform: scale(1); }
+          50% { transform: scale(1.05); }
+          100% { transform: scale(1); }
+        }
+        .hero-button {
+          animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+          0% { transform: translateY(0px); }
+          50% { transform: translateY(-10px); }
+          100% { transform: translateY(0px); }
+        }
+    </style>
 </head>
+
 <body class="overflow-x-hidden min-h-screen relative">
     <!-- Elemento de background fixo -->
     <div class="fixed-bg"></div>
@@ -15,20 +39,21 @@
     <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
         <!-- Header -->
         <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
-            <a href="../index.html">
+            <a href="index.html">
                 <img src="../images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
             </a>
             <!-- Menu para desktop -->
             <nav class="hidden md:flex space-x-4 text-white text-lg">
-                <a href="../index.html" class="hover:text-yellow-400 transition">Home</a>
-                <a href="../schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
-                <a href="../index.html#patrocinadores" class="hover:text-yellow-400 transition">Patrocinadores</a>
-                <a href="../contato.html" class="hover:text-yellow-400 transition">Contato</a>
+                <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
+                <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
+                <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
+                <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
             </nav>
             <!-- Botão do menu móvel -->
             <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
                 </svg>
             </button>
         </header>
@@ -36,10 +61,10 @@
         <!-- Menu móvel -->
         <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
             <ul class="flex flex-col p-4 space-y-2">
-                <li><a href="../index.html" class="block hover:text-yellow-400 transition">Home</a></li>
-                <li><a href="../schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
-                <li><a href="../index.html#patrocinadores" class="block hover:text-yellow-400 transition">Patrocinadores</a></li>
-                <li><a href="../contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
+                <li><a href="/index.html" class="block hover:text-yellow-400 transition">Home</a></li>
+                <li><a href="/schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
+                <li><a href="/speakers.html" class="block hover:text-yellow-400 transition">Palestrantes</a></li>
+                <li><a href="/contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
             </ul>
         </nav>
 
@@ -48,31 +73,41 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/fernando-merces.jpeg" alt="Fernando Mercês" class="w-full h-full object-cover" onerror="this.src='../images/speakers/default-avatar.png'">
+                        <img src="../images/speakers/fernando-merces.jpeg" alt="Fernando Mercês"
+                            class="w-full h-full object-cover"
+                            onerror="this.src='../images/speakers/default-avatar.png'">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Fernando Mercês</h1>
                     <p class="text-xl text-yellow-400">Senior Security Researcher</p>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">O que vi em dez anos como pesquisador de segurança</h2>
-                    <p class="text-lg text-white mb-4">Main Stage - 09:30</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">O que vi em dez anos como pesquisador de
+                        segurança</h2>
+                    <p class="text-lg text-white mb-4">09:30 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Fernando Mercês compartilha suas experiências e aprendizados ao longo de uma década como pesquisador de segurança da informação, destacando os principais desafios, descobertas e tendências observadas no campo da cibersegurança.</p>
+                        <p class="mb-6">Fernando Mercês compartilha suas experiências e aprendizados ao longo de uma
+                            década como pesquisador de segurança da informação, destacando os principais desafios,
+                            descobertas e tendências observadas no campo da cibersegurança.</p>
                     </div>
                 </div>
 
                 <div>
                     <h2 class="text-2xl font-bold text-yellow-400 mb-4">Sobre Fernando Mercês</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Fernando Mercês é um renomado pesquisador de segurança com mais de uma década de experiência na área. Atualmente, atua como Senior Security Researcher na Trend Micro, onde lidera pesquisas em malware e ameaças cibernéticas.</p>
-                        <p class="mb-6">Com uma sólida formação acadêmica e vasta experiência prática, Fernando tem contribuído significativamente para a comunidade de segurança através de suas pesquisas, palestras e publicações técnicas.</p>
+                        <p class="mb-6">Fernando Mercês é um renomado pesquisador de segurança com mais de uma década de
+                            experiência na área. Atualmente, atua como Senior Security Researcher na Trend Micro, onde
+                            lidera pesquisas em malware e ameaças cibernéticas.</p>
+                        <p class="mb-6">Com uma sólida formação acadêmica e vasta experiência prática, Fernando tem
+                            contribuído significativamente para a comunidade de segurança através de suas pesquisas,
+                            palestras e publicações técnicas.</p>
                     </div>
                 </div>
             </div>
 
             <div class="text-center mt-8">
-                <a href="../schedule.html" class="inline-block bg-yellow-400 text-black font-bold py-3 px-6 rounded-lg hover:bg-yellow-500 transition duration-300">
+                <a href="../schedule.html"
+                    class="inline-block bg-yellow-400 text-black font-bold py-3 px-6 rounded-lg hover:bg-yellow-500 transition duration-300">
                     Back to Schedule
                 </a>
             </div>
@@ -95,4 +130,5 @@
         });
     </script>
 </body>
+
 </html>
