--- a/speakers/pedro-sydenstricker.html
+++ b/speakers/pedro-sydenstricker.html
@@ -1,12 +1,33 @@
-<!DOCTYPE html>
-<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedro Sydenstricker - BSidesRJ 2025</title>
+    <title>BSidesRJ - BSides Rio de Janeiro</title>
+    <!-- Tailwind CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/custom.css">
+    <!-- CSS customizado -->
+    <link rel="stylesheet" href="css/custom.css">
+  <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
+    <style>
+        .countdown-item {
+          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+          animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+          0% { transform: scale(1); }
+          50% { transform: scale(1.05); }
+          100% { transform: scale(1); }
+        }
+        .hero-button {
+          animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+          0% { transform: translateY(0px); }
+          50% { transform: translateY(-10px); }
+          100% { transform: translateY(0px); }
+        }
+    </style>
 </head>
+
 <body class="overflow-x-hidden min-h-screen relative">
     <!-- Elemento de background fixo -->
     <div class="fixed-bg"></div>
@@ -15,20 +36,21 @@
     <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
         <!-- Header -->
         <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
-            <a href="../index.html">
+            <a href="index.html">
                 <img src="../images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
             </a>
             <!-- Menu para desktop -->
             <nav class="hidden md:flex space-x-4 text-white text-lg">
-                <a href="../index.html" class="hover:text-yellow-400 transition">Home</a>
-                <a href="../schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
-                <a href="../index.html#patrocinadores" class="hover:text-yellow-400 transition">Patrocinadores</a>
-                <a href="../contato.html" class="hover:text-yellow-400 transition">Contato</a>
+                <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
+                <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
+                <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
+                <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
             </nav>
             <!-- Botão do menu móvel -->
             <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
                 </svg>
             </button>
         </header>
@@ -36,10 +58,10 @@
         <!-- Menu móvel -->
         <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
             <ul class="flex flex-col p-4 space-y-2">
-                <li><a href="../index.html" class="block hover:text-yellow-400 transition">Home</a></li>
-                <li><a href="../schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
-                <li><a href="../index.html#patrocinadores" class="block hover:text-yellow-400 transition">Patrocinadores</a></li>
-                <li><a href="../contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
+                <li><a href="/index.html" class="block hover:text-yellow-400 transition">Home</a></li>
+                <li><a href="/schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
+                <li><a href="/speakers.html" class="block hover:text-yellow-400 transition">Palestrantes</a></li>
+                <li><a href="/contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
             </ul>
         </nav>
 
@@ -48,16 +70,15 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/default-avatar.png" alt="Pedro Sydenstricker" class="w-full h-full object-cover">
+                        <img src="../images/speakers/pedro-sydenstricker.jpg" alt="Pedro Sydenstricker" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Pedro Sydenstricker</h1>
                     <p class="text-xl text-yellow-400">psydenst.dev@gmail.com</p>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Palestra</h2>
-                    <h3 class="text-xl font-medium mb-2">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</h3>
-                    <p class="text-lg text-white mb-4">11:30 - Palco Secundário</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</h2>
+                    <p class="text-lg text-white mb-4">13:30 - Palco Secundário</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">Uma exploração da tecnologia Nym mixnet e seu papel na construção de uma infraestrutura de privacidade descentralizada e open-source para a próxima geração da internet.</p>
                     </div>
